# tyuiu-rag

./: .env  Dockerfile  advanced.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
chromadb_data/: chroma.sqlite3
docker/: chromadb.yml  elasticsearch.yml
new_rag/: embeddings.py  llm.py  retriever.py  vector_store.py
new_rag/loaders/: elastic_search.py
new_rag/retrievers/: chroma.py  elastic_search.py
src/: config.py
src/api_v1/: lifespan.py
src/api_v1/container/: __init__.py  rag.py
src/api_v1/dependencies/: __init__.py  rag.py
src/api_v1/routers/: __init__.py  rag.py
src/core/rag/: __init__.py  builder.py  embeddings.py  vector_store.py
src/core/rag/loaders/: chroma.py  elastic_search.py
src/core/rag/retrievers/: __init__.py  builder.py  elastic_search.py
src/database/: chroma.py
src/embeddings/: function.py  model.py
src/http/: client.py
src/http/abc/: response.py
src/http/abstract/: client.py
src/http/response/: json.py  text.py
src/http/utils/: checker.py
src/misc/: file.py
src/rag/: builder.py  chain.py
src/rag/abstract/: __init__.py  auth.py  builder.py  chain.py  embeddings.py  llm.py  retriever.py  vector_store.py
src/rag/chain/: auth.py  embeddings.py  llm.py  vector_store.py
src/rag/embeddings/: model.py
src/rag/generator/: auth.py  credentials.py  factory.py  llm.py
src/rag/generator/abstract/: credentials.py  factory.py  llm.py
src/rag/retriever/: chroma.py  embeddings.py
src/rag/vector_store/: chroma.py
src/services/: chat.py
