[tool.poetry]
name = "tyuiurag"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.14"
gigachain = "^0.2.16"
gigachain-community = "^0.2.16.post3"
chromadb = "^0.6.1"
lxml = "^5.3.0"
sentence-transformers = "^3.3.1"
fastapi = {extras = ["all"], version = "^0.115.6"}
aiohttp = "^3.11.11"
h2 = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
